--- a/cmd.html
+++ b/cmd.html
@@ -28,15 +28,18 @@
          </ul>
          <h3 id="rt-3">Системная информация</h3>
          <ul>
-            <li>DATE – Выводит или устанавливает системное время</li>
-            <li>TIME – Выводит или устанавливает текущую дату</li>
+            <li>TIME – Выводит или устанавливает системное время</li>
+            <li>DATE – Выводит или устанавливает текущую дату</li>
             <li>HOSTNAME – Отображает имя компьютера</li>
             <li>SYSTEMINFO – Отображает информацию о конфигурации компьютера</li>
             <li>VER – Позволяет просмотреть версию Windows</li>
          </ul>
       </div>
       <!--footer-->
-      <footer class="animated fadeIn">
+      <footer>
+         <p class="location" style="text-align: center;">
+            <a href="mac.html">Вернутся на главную</a>
+         </p>
          &copy; 2024. SkyPro
       </footer>
    </body>
