--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
          <p> <br> </p>
       </div>
       <!--footer-->
-      <footer class="animated fadeIn">
+     <footer>
+         <p class="location" style="text-align: center;">
+            <a href="mac.html">Вернутся на главную</a>
+         </p>
          &copy; 2024. SkyPro
       </footer>
    </body>
